# experiment-eye-40129

./: .gitignore  0_build.txt  10_Build macOS Universal (DMG & ZIP).txt  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: macos-electron-build.yml  macos-tauri-build.yml  pages.yml
electron/: main.js  package-lock.json  package.json
electron/build-hooks/: afterPack.js  beforePack.js
public/: 404.html  manifest.webmanifest  sw.js
public/data/: Export_Mental_Maps.geojson  Gesamtdaten_harmonisiert.xlsx  canada_provinces.geojson
src/: App.tsx  config.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AccentPreferencesView.tsx  AccentRegionsAnalysis.tsx  AdvancedAnalysis.tsx  CanadaHeatmap.tsx  DataTable.tsx  DataUpload.tsx  DataVisualization.tsx  GeoJsonUpload.tsx  MentalMapAnalysis.tsx  MentalMapHeatmap.tsx  MentalMapViewer.tsx  ParticipantProfile.tsx  ParticipantSelector.tsx  Statistics.tsx
src/pages/: Index.tsx
src/schemas/: experiment.ts
src/types/: experiment.ts
src/utils/: dataParser.ts
