[package]
name = "perzeptionsexperimente-auswertung"
version = "0.1.0"
description = "Forschungsdaten-Analyseplattform"
authors = ["Oppenländer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true